--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>CodePen - Responsive Social Platform UI</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
 
 </head>
 <body>
@@ -214,14 +215,14 @@
         </a>
       </div>
     </div>
-    <a href="https://twitter.com/AysnrTrkk" class="follow-me" target="_blank">
+    <a href="https://www.facebook.com/bisht.ridhi/" class="follow-me" target="_blank">
       <span class="follow-text">
         <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
-        Follow me on Twitter
+        Follow me on Facebook
      </span>
       <span class="developer">
-        <img src="https://pbs.twimg.com/profile_images/1253782473953157124/x56UURmt_400x400.jpg" />
-        Aysenur Turk — @AysnrTrkk
+        <img src="https://1.bp.blogspot.com/-Uzss4tgASV4/YIZjBNM-3qI/AAAAAAAADJo/imcK2QJlb2o7Za6KAIpI-m8kJJf4EemUACLcBGAsYHQ/s1080/159295547_3810630475649556_8245041171902276886_n.jpg" />
+        Ridhi bisht — @Abisht.ridhi
       </span>
     </a>
   </div>
@@ -514,6 +515,13 @@
   </div>
   <div class="overlay" @click="rightSide = false; leftSide = false" :class="{ 'active': rightSide || leftSide }"></div>
 </div>
+  <footer>
+	<p>
+		Created with <i class="fa fa-heart"></i> by
+		<a target="_blank" href="https://www.facebook.com/bisht.ridhi/">Ridhi Bisht</a>
+	
+	</p>
+</footer>
 <!-- partial -->
   <script src='https://cdn.jsdelivr.net/gh/alpinejs/alpine@v1.9.4/dist/alpine.js'></script>
 </body>
